--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.3.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standart": "^0.2.0",
     "eslint-plugin-tailwindcss": "^3.14.0",
-    "next": "14.0.4",
+    "mongoose": "^8.1.0",
+    "next": "^14.1.1-canary.3",
     "prettier": "^3.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tooltip": "5.8.3",
+    "sharp": "^0.33.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "postcss": "^8",
+    "postcss": "^8.4.33",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
