--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "eslint-plugin-tailwindcss": "^3.14.0",
     "mongoose": "^8.1.0",
     "next": "^14.1.1-canary.3",
+    "node": "^21.2.0",
     "prettier": "^3.2.4",
     "react": "^18",
     "react-dom": "^18",
