--- a/package.json
+++ b/package.json
@@ -6,32 +6,43 @@
     "dev": "next dev",
     "build": "next build",
     "start": "node server.js",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "dotenv": "^16.3.2",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standart": "^0.2.0",
-    "eslint-plugin-tailwindcss": "^3.14.0",
     "mongoose": "^8.1.0",
     "next": "^14.1.1-canary.3",
-    "node": "^21.2.0",
-    "prettier": "^3.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-tooltip": "5.8.3",
+    "react-tooltip": "^5.25.2",
     "sharp": "^0.33.2",
+    "use-debounce": "^10.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standart": "^0.2.0",
+    "eslint-plugin-jest-dom": "^5.1.0",
+    "eslint-plugin-tailwindcss": "^3.14.0",
+    "eslint-plugin-testing-library": "^6.2.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.4",
     "tailwindcss": "^3.3.0",
+    "ts-jest": "^29.1.1",
     "typescript": "^5"
   }
 }
