--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^14.1.1-canary.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "react-tooltip": "^5.25.2",
     "sharp": "^0.33.2",
     "use-debounce": "^10.0.0",
